--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,54 @@
       <version>1.2.47</version>
 
     </dependency>
+
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+
+
+    <dependency>
+
+      <groupId>com.github.pagehelper</groupId>
+
+      <artifactId>pagehelper</artifactId>
+
+      <version>4.2.1</version>
+
+    </dependency>
+
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jquery</artifactId>
+      <version>3.1.1</version>
+    </dependency>
+
+    <dependency>
+
+      <groupId>com.fasterxml.jackson.core</groupId>
+
+      <artifactId>jackson-core</artifactId>
+
+      <version>2.7.3</version>
+
+    </dependency>
+
+    <dependency>
+
+      <groupId>com.fasterxml.jackson.core</groupId>
+
+      <artifactId>jackson-databind</artifactId>
+
+      <version>2.7.3</version>
+
+    </dependency>
   </dependencies>
 
   <build>
